--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@material-extended/mde": "^3.0.0",
+    "ag-grid-angular": "^20.2.0",
+    "ag-grid-community": "^20.2.0",
     "angular-material-fileupload": "^2.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
