--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start" : "ng serve -o --port 4300 --proxy-config proxy.conf.json",
+    "start": "ng serve -o --port 4300 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,6 +27,7 @@
     "angular-material-fileupload": "^2.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "material-steppers": "^2.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
