--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "material-steppers": "^2.0.0",
+    "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
