--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
-              "src/variables.scss"
+              "src/variables.scss",
+              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeng/resources/themes/nova-light/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
             ],
             "scripts": []
           },
