--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jwt-decode": "^2.2.0",
     "material-steppers": "^2.0.0",
     "ngx-bootstrap": "^5.5.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
